--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
       <h2 class="section__title">Полезные ресурсы</h2>
       <p class="section__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
-        <img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Arzamas" class="resources__logo">
-        <img src="./images/images_sprint-2/logo/resources-n1.svg" alt="N+1" class="resources__logo">
-        <img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
-        <img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+        <img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Логотип не загрузился" class="resources__logo">
+        <img src="./images/images_sprint-2/logo/resources-n1.svg" alt="Логотип не загрузился" class="resources__logo">
+        <img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Логотип не загрузился" class="resources__logo">
+        <img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Логотип не загрузился" class="resources__logo">
       </div>
     </section>
 
