--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </section>
 
       <section class="techniques">
-        <h2 class="section__title">Техники обучения</h2>
-        <p class="section__subtitle">Пять практик от Барбары Оакли</p>
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img src="./images/images_sprint-2/cards-attention.png" alt="Вдохновляющая картинка" class="cards__image">
@@ -64,8 +64,8 @@
       </section>
 
       <section class="video">
-        <h2 class="section__title">Видео нa TED</h2>
-        <p class="section__subtitle">Для тех, кто любит прокрастинировать</p>
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -89,8 +89,8 @@
       </section>
 
       <section class="digits">
-        <h2 class="section__title">Цифры и факты</h2>
-        <p class="section__subtitle">Про учёбу и мозг</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -144,46 +144,46 @@
       </section>
 
       <section class="kaufman">
-        <h2 class="section__title section__title_theme_dark">Принципы обучения</h2>
-        <p class="section__subtitle section__subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">1</h3>
             <p class="table__text">Выберите привлекательный проект.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">2</h3>
             <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">3</h3>
             <p class="table__text">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">4</h3>
             <p class="table__text">Разбейте навык на элементы.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">5</h3>
             <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">6</h3>
             <p class="table__text">Устраните препятствия для занятий.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">7</h3>
             <p class="table__text">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">8</h3>
             <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">9</h3>
             <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table_cell table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading">10</h3>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
@@ -193,8 +193,8 @@
     </main>
 
     <section class="resources">
-      <h2 class="section__title">Полезные ресурсы</h2>
-      <p class="section__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
         <img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Логотип не загрузился" class="resources__logo">
         <img src="./images/images_sprint-2/logo/resources-n1.svg" alt="Логотип не загрузился" class="resources__logo">
