--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-        <img src="./images/logo_place_header.svg" alt="ЛОГОТИП" class="logo logo_place_header">
+      <img src="./images/logo_place_header.svg" alt="ЛОГОТИП" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
@@ -21,14 +21,14 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"> <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
@@ -111,8 +111,8 @@
           </li>
           <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-              Всемирный Банк, 2017</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
@@ -133,7 +133,7 @@
         <div class="khan__container">
           <p class="khan__autor">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -195,12 +195,20 @@
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-      <div class="resources__logo-zone">
-        <img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Логотип не загрузился" class="resources__logo">
-        <img src="./images/images_sprint-2/logo/resources-n1.svg" alt="Логотип не загрузился" class="resources__logo">
-        <img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Логотип не загрузился" class="resources__logo">
-        <img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Логотип не загрузился" class="resources__logo">
-      </div>
+      <ul class="resources__logo-zone">
+        <li>
+          <a href="https://arzamas.academy/" target="_blank"><img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Логотип не загрузился" class="resources__logo"></a>
+        </li>
+        <li>
+          <a href="https://nplus1.ru/" target="_blank"><img src="./images/images_sprint-2/logo/resources-n1.svg" alt="Логотип не загрузился" class="resources__logo"></a>
+        </li>
+        <li>
+          <a href="https://strelka.com/ru" target="_blank"><img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Логотип не загрузился" class="resources__logo"></a>
+        </li>
+        <li>
+          <a href="https://polka.academy/" target="_blank"><img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Логотип не загрузился" class="resources__logo"></a>
+        </li>
+      </ul>
     </section>
 
     <footer class="footer">
